# game_beta

./: .gitignore  .pdm-python  README.md  character.py  config.json  config.py  driver.py  pyproject.toml  requirements.txt
Character/: character.py  hero.py  villain.py
Character/Inventory/: Inventory.py  inventory.py
Combat/: combat.py  dice_roller.py
Config/: config.json  config.py
Config/conf_dump/: characters.json  config.json  display.json
Item/: item.py
Item/Weapon/: knife.py  stick.py  weapon.py
Tests/: test_game.py
UI/: game.py  menu.py  screen.py
UI/ScreenTypes/: level.py  menu.py
source/: conf.py  index.rst
src/: driver.py
src/Character/Inventory/: inventory.py
src/Combat/: combat.py
src/Config/: config.py
src/Config/conf_dump/: characters.json  display.json  items.json
src/Item/Weapon/: knife.py  stick.py  weapon.py
src/UI/: game.py  objects.py  screen.py
src/UI/ScreenTypes/: level.py
src/game_beta.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_game.py
