[project]
name = "game_beta"
version = "0.0.1"
authors = [
  { name="Andrew Wallace", email="wallace645@gmail.com" },
]
description = "This is a kitchen-themed game."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AndyW98/game_beta"
"Bug Tracker" = "https://github.com/AndyW98/game_beta/issues"