[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "game_beta"
version = "0.0.1"
description = "This is a kitchen-themed game."
authors = [
    {name = "Andrew Wallace", email = "wallace645@gmail.com"},
]
dependencies = [
    "pytest>=7.3.1",
    "pygame>=2.3.0",
    "tk>=0.1.0",
    "numpy>=1.24.3",
    "sphinx>=6.1.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}


[tool.pdm]

[tool.pdm.scripts]
start = "python3 src/driver.py"
test = "pytest"
docgen = "make html"
